chore: adapt root build files for standalone kffi repository